--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style.css
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style.css
@@ -1,9 +1,13 @@
 .super-mario {
     width: 200px;
+    position: absolute;
   }
   
   .goomba {
     width: 100px;
+    position: absolute;
+    margin: 300px 0px 0px 50px;
+
   }
   
   .baloon {
@@ -16,4 +20,6 @@
   
   .bowser {
     width: 200px;
+    position: absolute;
+    
   }
