--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/rocket/style.css
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/rocket/style.css
@@ -15,6 +15,7 @@ div:nth-of-type(3) {
     background-color: grey;
     font-weight: 200;
     font-size: large;
+    padding: 50px 50px 50px 50px;
 }
 div:nth-of-type(4) {
     background-color: black;
@@ -23,4 +24,7 @@ div:nth-of-type(4) {
 div:nth-of-type(5) {
     background-color: aqua;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+div:nth-of-type(2n+1){
+    font-style: italic;
 }
