--- a/fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise1.css
+++ b/fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise1.css
@@ -11,15 +11,19 @@
   }
   
   body {
-  
+    margin: 50px;
   }
   
   article {
   
   }
+
+  p {
+    font-size: 18px;
+  }
   
   h1 {
-  
+    font-size: 30px;
   }
   
   h2 {
@@ -35,13 +39,51 @@
   }
   
   section {
-  
+    display: flex;
+    flex-wrap: wrap;
   }
   
   figure {
       margin: 0;
+      padding: 30px 10px;
   }
   
   figcaption {
     font-size: .8em;
+  }
+
+  @media (max-width: 700px) {
+    body {
+        background-color: grey;
+        margin: 20px;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+
+    p {
+        font-size: 36px;
+    }
+
+    figure {
+        width: 40%;
+    }
+  }
+
+  @media (min-width: 1144px) {
+    body {
+        background-color: aqua;
+        max-width: 1440px;
+    }
+    p {
+        font-size: 30px;
+    }
+    h1 {
+        font-size: 50px;
+    }
+    figure {
+        width: 30%;
+        
+    }
   }
