--- a/fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise2.css
+++ b/fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise2.css
@@ -55,13 +55,12 @@ html {
     .container-nav {
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: space-around;
         background-color: white;
     }
     #nav-menu {
         display: flex;
         list-style: none;
-        justify-content: center;
     }
     #nav-menu li{
         padding: 0 10px;
@@ -78,3 +77,53 @@ html {
         margin: 0 5%;
     }
   }
+
+    @media (min-width: 1025px) {
+        body{
+            background-color: #87cefa;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+        }
+        .container-nav {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            background-color: white;
+            font-size: 25px;
+            padding: 0 5%;
+        }
+        #nav-menu {
+            display: flex;
+            list-style: none;
+        }
+        #nav-menu li{
+            padding: 0 10px;
+        }
+        .aside-one, .aside-two {
+           
+        }
+        .container-aside {
+            display: flex;
+            justify-content: space-around;
+            padding: 20px 0;
+            font-size: 25px;
+        }
+        .main-content h1 {
+            font-size: 50px;
+            text-align: center;
+        }
+        .main-content p, .aside-one p, .aside-two p, footer p{
+            font-size: 30px;
+        }
+        .content-container {
+            margin: 0 5%;
+        }
+        
+        footer h3 {
+            font-size: 40px;
+            text-align: center;
+        }
+    
+    }
